myteo/test/parser/ast/pattern/malformed_error.exp
ERROR: test/parser/ast/pattern/malformed_error.myte:2:6 Unexpected token "1", expected start of pattern
 2 |   val 1 = 1;
   |       ^