myteo/test/parser/ast/pattern/malformed_error.myte
fun main() {
  val 1 = 1;
}